--- a/index.html
+++ b/index.html
@@ -19,7 +19,28 @@
 
 <body>
     <!-- start header -->
-    <header>madkour</header>
+    <header>
+        <nav>
+            <!-- logo -->
+            <img src="../Template-One/master/image/logo.png" alt="">
+            <!-- minu links -->
+            <div>
+                <!-- icon -->
+                <span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <!-- links  -->
+                <ul>
+                    <li><a href="#services">services</a></li>
+                    <li><a href="#portfolio">portfolio</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <!-- End header -->
     <!-- start section-->
     <section></section>
